Complete Individual Assignment 2: Code quality improvements, testing, CI/CD, Docker deployment, and monitoring
- Refactored code following SOLID principles
- Added comprehensive unit and integration tests
- Implemented CI pipeline with 70% coverage requirement
- Added CD pipeline for Docker-based deployment
- Containerized application with production-ready Dockerfile
- Added health endpoint and Prometheus metrics
- Configured monitoring with Prometheus and Grafana
- Updated documentation (README.md and REPORT.md)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,30 @@
-node_modules/
-*/node_modules/
-*/build/
+# Dependencies
+/vendor/
+composer.lock
+composer.phar
+
+# Database
+*.sqlite
+*.sqlite3
+/data/
+
+# Coverage reports
+/coverage/
+*.clover
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+
+# Docker
+*.tar.gz
