--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,53 +1,40 @@
-name: CD Pipeline - Deploy to Google Cloud
+name: Deploy to Cloud Run
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
-  build-and-deploy:
-    name: Build and Deploy to Google Cloud Run
+  deploy:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-    
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Set up Cloud SDK
-        uses: google-github-actions/setup-gcloud@v1
+        uses: actions/checkout@v3
+
+      - name: Authenticate to Google
+        uses: google-github-actions/auth@v2
         with:
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Configure gcloud
+        uses: google-github-actions/setup-gcloud@v2
+        with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
-      
-      - name: Configure Docker for GCR
-        run: gcloud auth configure-docker --quiet
-      
-      - name: Build Docker image
+
+      - name: Build and push container
         run: |
-          docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/shortkenny:${{ github.sha }} .
-          docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/shortkenny:latest .
-      
-      - name: Push Docker image to GCR
-        run: |
-          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/shortkenny:${{ github.sha }}
-          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/shortkenny:latest
-      
+          gcloud builds submit --tag gcr.io/${{ secrets.GCP_PROJECT_ID }}/shortkenny
+
       - name: Deploy to Cloud Run
         run: |
           gcloud run deploy shortkenny \
-            --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/shortkenny:${{ github.sha }} \
-            --platform managed \
+            --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/shortkenny \
             --region ${{ secrets.GCP_REGION }} \
+            --platform managed \
             --allow-unauthenticated \
             --port 80 \
             --memory 512Mi \
             --cpu 1 \
-            --set-env-vars DB_DSN=sqlite:/var/www/html/data/data.sqlite \
-            --quiet
-      
-      - name: Get deployment URL
-        run: |
-          SERVICE_URL=$(gcloud run services describe shortkenny --platform managed --region ${{ secrets.GCP_REGION }} --format 'value(status.url)')
-          echo "Application deployed successfully!"
-          echo "URL: $SERVICE_URL"
+            --set-env-vars DB_DSN=sqlite:/var/www/html/data/data.sqlite
