--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,14 +19,19 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.2'
-          extensions: pdo_sqlite, xdebug
-          coverage: xdebug
+          extensions: pdo_sqlite
+          coverage: pcov
       
-      - name: Verify Xdebug is enabled
+      - name: Verify coverage driver is enabled
         run: |
-          php -m | grep -i xdebug || echo "WARNING: Xdebug not found in loaded modules"
-          php -r "echo 'Xdebug version: ' . phpversion('xdebug') . PHP_EOL;"
-          php -r "var_dump(extension_loaded('xdebug'));" || echo "Xdebug not loaded"
+          php -m | grep -i pcov || php -m | grep -i xdebug || echo "WARNING: Coverage driver not found"
+          if php -m | grep -qi pcov; then
+            echo "✅ PCOV is loaded"
+            php -r "echo 'PCOV version: ' . phpversion('pcov') . PHP_EOL;"
+          elif php -m | grep -qi xdebug; then
+            echo "✅ Xdebug is loaded"
+            php -r "echo 'Xdebug version: ' . phpversion('xdebug') . PHP_EOL;"
+          fi
       
       - name: Install dependencies
         run: |
@@ -61,18 +66,13 @@ jobs:
           fi
           
           echo "Running tests with coverage..."
-          # Set Xdebug mode explicitly for coverage
-          export XDEBUG_MODE=coverage
-          
-          # PHPUnit 10: Need --coverage flag to enable coverage collection
-          # Then specify output formats
+          # PHPUnit 10: Just use the output format flags - they enable coverage automatically
+          # PCOV doesn't need mode setting like Xdebug
           echo "Running PHPUnit with coverage enabled..."
           ./vendor/bin/phpunit \
-            --coverage \
             --coverage-clover=coverage/clover.xml \
             --coverage-html=coverage/html \
-            --coverage-text=coverage/coverage.txt \
-            --log-junit=coverage/junit.xml
+            --coverage-text=coverage/coverage.txt
           
           echo "Checking if coverage files were generated..."
           ls -la coverage/ || echo "Coverage directory is empty"
@@ -81,8 +81,13 @@ jobs:
             echo "ERROR: Coverage file was not generated!"
             echo "Checking PHPUnit version and coverage support..."
             ./vendor/bin/phpunit --version
-            php -r "echo 'Xdebug loaded: ' . (extension_loaded('xdebug') ? 'YES' : 'NO') . PHP_EOL;"
-            php -r "if (extension_loaded('xdebug')) { echo 'Xdebug version: ' . phpversion('xdebug') . PHP_EOL; }"
+            if php -m | grep -qi pcov; then
+              php -r "echo 'PCOV loaded: YES, version: ' . phpversion('pcov') . PHP_EOL;"
+            elif php -m | grep -qi xdebug; then
+              php -r "echo 'Xdebug loaded: YES, version: ' . phpversion('xdebug') . PHP_EOL;"
+            else
+              echo "No coverage driver loaded!"
+            fi
             
             echo "Attempting to generate coverage with verbose output..."
             ./vendor/bin/phpunit --coverage-clover=coverage/clover.xml --verbose 2>&1 | head -50
