--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,19 +66,17 @@ jobs:
           fi
           
           echo "Running tests with coverage..."
-          # PHPUnit 10: Removed coverage config from phpunit.xml
-          # Using only command-line flags with explicit filter paths
-          echo "Generating coverage with explicit filter..."
-          ./vendor/bin/phpunit \
-            --coverage-clover=coverage/clover.xml \
-            --coverage-html=coverage/html \
-            --coverage-text=coverage/coverage.txt \
-            --coverage-filter=src \
-            --coverage-filter=api.php \
-            --coverage-filter=redirect.php \
-            --coverage-filter=lib.php
+          echo "Generating coverage reports..."
+          ./vendor/bin/phpunit --coverage-clover=coverage/clover.xml --coverage-html=coverage/html --coverage-text=coverage/coverage.txt
           
-          echo "PHPUnit exit code: $?"
+          EXIT_CODE=$?
+          echo "PHPUnit exit code: $EXIT_CODE"
+          
+          if [ $EXIT_CODE -ne 0 ]; then
+            echo "ERROR: Tests failed!"
+            exit 1
+          fi
+          
           echo "Files in coverage directory:"
           ls -la coverage/ 2>&1 || echo "Coverage directory doesn't exist"
           
@@ -98,7 +96,7 @@ jobs:
             fi
             
             echo "Attempting to generate coverage with verbose output..."
-            ./vendor/bin/phpunit --coverage-clover=coverage/clover.xml --verbose 2>&1 | head -50
+            ./vendor/bin/phpunit --coverage-clover=coverage/clover.xml -vv 2>&1 | head -50
             
             echo "Attempting to run tests without coverage to verify tests pass..."
             ./vendor/bin/phpunit
