--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,39 +15,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
-      - name: Setup PHP
+      - name: Setup PHP and enable coverage
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.2'
-          extensions: pdo_sqlite, xdebug
+          extensions: pdo_sqlite
           coverage: xdebug
       
-      - name: Install Xdebug
+      - name: Verify Xdebug is enabled
         run: |
-          sudo apt-get update
-          sudo apt-get install -y php-xdebug
-          php -m | grep xdebug || echo "Xdebug not found after installation"
-      
-      - name: Verify and configure Xdebug
-        run: |
-          echo "Checking Xdebug installation..."
-          php -m | grep -i xdebug || echo "WARNING: Xdebug not found in modules"
-          
-          if php -m | grep -qi xdebug; then
-            echo "✅ Xdebug is loaded"
+          php -m | grep -i xdebug || echo "WARNING: Xdebug not found"
+          php -r "echo 'Xdebug loaded: ' . (extension_loaded('xdebug') ? 'YES' : 'NO') . PHP_EOL;"
+          if extension_loaded('xdebug'); then
             php -r "echo 'Xdebug version: ' . phpversion('xdebug') . PHP_EOL;"
-          else
-            echo "ERROR: Xdebug is not loaded!"
-            exit 1
           fi
-          
-          # Set Xdebug mode for coverage
-          echo "XDEBUG_MODE=coverage" >> $GITHUB_ENV
-          export XDEBUG_MODE=coverage
-          
-          # Verify mode is set
-          php -r "echo 'Xdebug mode: ' . ini_get('xdebug.mode') . PHP_EOL;"
-          php -r "var_dump(extension_loaded('xdebug'));"
       
       - name: Install dependencies
         run: |
@@ -95,15 +76,16 @@ jobs:
             composer install --prefer-dist --no-progress --no-interaction
           fi
           
-          echo "Running tests with coverage..."
-          echo "XDEBUG_MODE: $XDEBUG_MODE"
+          echo "Verifying Xdebug before running tests..."
           php -r "echo 'Xdebug loaded: ' . (extension_loaded('xdebug') ? 'YES' : 'NO') . PHP_EOL;"
-          php -r "if (extension_loaded('xdebug')) { echo 'Xdebug mode: ' . ini_get('xdebug.mode') . PHP_EOL; }"
+          php -r "if (extension_loaded('xdebug')) { echo 'Xdebug version: ' . phpversion('xdebug') . PHP_EOL; echo 'Xdebug mode: ' . ini_get('xdebug.mode') . PHP_EOL; }"
+          echo "XDEBUG_MODE environment variable: $XDEBUG_MODE"
           
-          # Run PHPUnit with coverage flags
-          ./vendor/bin/phpunit --coverage-clover=coverage/clover.xml \
-                               --coverage-html=coverage/html \
-                               --coverage-text=coverage/coverage.txt
+          echo "Running tests with coverage..."
+          XDEBUG_MODE=coverage ./vendor/bin/phpunit \
+            --coverage-clover=coverage/clover.xml \
+            --coverage-html=coverage/html \
+            --coverage-text=coverage/coverage.txt
           
           EXIT_CODE=$?
           echo "PHPUnit exit code: $EXIT_CODE"
@@ -118,10 +100,11 @@ jobs:
           
           if [ ! -f coverage/clover.xml ]; then
             echo "ERROR: Coverage file was not generated!"
+            echo "Checking Xdebug status again..."
+            php -r "echo 'Xdebug loaded: ' . (extension_loaded('xdebug') ? 'YES' : 'NO') . PHP_EOL;"
+            php -r "if (extension_loaded('xdebug')) { echo 'Xdebug mode: ' . ini_get('xdebug.mode') . PHP_EOL; }"
             echo "Running with debug to see what's happening..."
-            ./vendor/bin/phpunit --coverage-clover=coverage/clover.xml --debug 2>&1 | head -100
-            echo "Checking if coverage directory is writable..."
-            touch coverage/test.txt && rm coverage/test.txt && echo "Directory is writable" || echo "Directory is NOT writable"
+            XDEBUG_MODE=coverage ./vendor/bin/phpunit --coverage-clover=coverage/clover.xml --debug 2>&1 | head -100
             exit 1
           fi
           
