Fix shell syntax error: use PHP exit code instead of PHP function in bash if
- Replace invalid 'if extension_loaded()' with 'if php -r exit()'
- This allows bash to properly check the PHP exit code
- Fixes workflow syntax error that was preventing execution

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,8 @@ jobs:
         run: |
           php -m | grep -i xdebug || echo "WARNING: Xdebug not found"
           php -r "echo 'Xdebug loaded: ' . (extension_loaded('xdebug') ? 'YES' : 'NO') . PHP_EOL;"
-          if extension_loaded('xdebug'); then
+          # Use a php -r call that returns success (exit code 0) when Xdebug is loaded
+          if php -r "exit(extension_loaded('xdebug') ? 0 : 1);"; then
             php -r "echo 'Xdebug version: ' . phpversion('xdebug') . PHP_EOL;"
           fi
       
