--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,16 +20,14 @@ jobs:
         with:
           php-version: '8.2'
           extensions: pdo_sqlite
-          coverage: xdebug
+          coverage: pcov
+          ini-values: pcov.directory=.
       
-      - name: Verify Xdebug is enabled
+      - name: Verify PCOV is enabled
         run: |
-          php -m | grep -i xdebug || echo "WARNING: Xdebug not found"
-          php -r "echo 'Xdebug loaded: ' . (extension_loaded('xdebug') ? 'YES' : 'NO') . PHP_EOL;"
-          # Use a php -r call that returns success (exit code 0) when Xdebug is loaded
-          if php -r "exit(extension_loaded('xdebug') ? 0 : 1);"; then
-            php -r "echo 'Xdebug version: ' . phpversion('xdebug') . PHP_EOL;"
-          fi
+          php -m | grep -i pcov || echo "WARNING: PCOV not found"
+          php -r "echo 'PCOV loaded: ' . (extension_loaded('pcov') ? 'YES' : 'NO') . PHP_EOL;"
+          php -r "if (extension_loaded('pcov')) { echo 'PCOV enabled: ' . (ini_get('pcov.enabled') ? 'YES' : 'NO') . PHP_EOL; }"
       
       - name: Install dependencies
         run: |
@@ -63,30 +61,20 @@ jobs:
       - name: Debug PHP & PHPUnit
         run: |
           php -v
-          php -m | grep -i xdebug || true
-          php -r "echo 'Xdebug loaded: ' . (extension_loaded('xdebug') ? 'YES' : 'NO') . PHP_EOL;"
-          php -r "if (extension_loaded('xdebug')) { echo 'Xdebug mode: ' . ini_get('xdebug.mode') . PHP_EOL; }"
+          php -m | grep -i pcov || true
+          php -r "echo 'PCOV loaded: ' . (extension_loaded('pcov') ? 'YES' : 'NO') . PHP_EOL;"
+          php -r "if (extension_loaded('pcov')) { echo 'PCOV enabled: ' . ini_get('pcov.enabled') . PHP_EOL; echo 'PCOV directory: ' . ini_get('pcov.directory') . PHP_EOL; }"
           ./vendor/bin/phpunit --version
       
       - name: Run tests with coverage
-        env:
-          XDEBUG_MODE: coverage
         run: |
-          if [ ! -f ./vendor/bin/phpunit ]; then
-            echo "PHPUnit not found! Installing..."
-            composer install --prefer-dist --no-progress --no-interaction
-          fi
+          echo "Running tests with PCOV coverage..."
+          php -r "echo 'PCOV loaded: ' . (extension_loaded('pcov') ? 'YES' : 'NO') . PHP_EOL;"
           
-          echo "Verifying Xdebug before running tests..."
-          php -r "echo 'Xdebug loaded: ' . (extension_loaded('xdebug') ? 'YES' : 'NO') . PHP_EOL;"
-          php -r "if (extension_loaded('xdebug')) { echo 'Xdebug version: ' . phpversion('xdebug') . PHP_EOL; echo 'Xdebug mode: ' . ini_get('xdebug.mode') . PHP_EOL; }"
-          echo "XDEBUG_MODE environment variable: $XDEBUG_MODE"
-          
-          echo "Running tests with coverage..."
-          XDEBUG_MODE=coverage ./vendor/bin/phpunit \
+          ./vendor/bin/phpunit \
             --coverage-clover=coverage/clover.xml \
             --coverage-html=coverage/html \
-            --coverage-text=coverage/coverage.txt
+            --coverage-text
           
           EXIT_CODE=$?
           echo "PHPUnit exit code: $EXIT_CODE"
@@ -101,16 +89,17 @@ jobs:
           
           if [ ! -f coverage/clover.xml ]; then
             echo "ERROR: Coverage file was not generated!"
-            echo "Checking Xdebug status again..."
-            php -r "echo 'Xdebug loaded: ' . (extension_loaded('xdebug') ? 'YES' : 'NO') . PHP_EOL;"
-            php -r "if (extension_loaded('xdebug')) { echo 'Xdebug mode: ' . ini_get('xdebug.mode') . PHP_EOL; }"
-            echo "Running with debug to see what's happening..."
-            XDEBUG_MODE=coverage ./vendor/bin/phpunit --coverage-clover=coverage/clover.xml --debug 2>&1 | head -100
+            echo "Checking PCOV status..."
+            php -r "echo 'PCOV loaded: ' . (extension_loaded('pcov') ? 'YES' : 'NO') . PHP_EOL;"
+            php -r "var_dump(ini_get_all('pcov'));"
             exit 1
           fi
           
           echo "✅ Coverage file generated successfully"
           ls -lh coverage/clover.xml
+          echo ""
+          echo "Coverage summary:"
+          head -50 coverage/clover.xml
       
       - name: Check coverage threshold
         run: |
